--- a/member.html
+++ b/member.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="utf-8">
@@ -42,7 +42,7 @@
       <div class="col harf">
         <h2>Research Student</h2>
         <img src="images/icon_wakaba.jpg" alt="Wakaba">
-	<p>新学员。梦想是成为web设计师。</p> 
+	<p>新学员。梦想是成为IT经理。</p> 
       </div>
     </div>
 
